M5385: Security Story 1: Create User, Group, Role
Create security model AutoValue objects.

User model entities (WIP)

Fix SecurityUtils.

Fix molgenis-security-core pom

Fix SwaggerController to use new User value object.

UserMetaData -> UserMetadata

Clean up SecurityUtils.

Remove old code.

UserDetailsService -> UserDetailsServiceImpl cause Sonar doesn't like the name clash with its own interface.

Move Entities to proper package.

Fix OwnedEntityRepositoryDecorator + tests.

No longer need the custom test configs.

Clean up molgenis-data-security plus tests.
Remove static permission checker.

Remove constructor parameter.

Return existing update behaviour of OwnedEntityReposityDecorator.

Fix molgenis-bootstrap.

Remove permission code from the import wizard controller classes

Fix security-core pom and RecoveryServiceImplTest

Use UserAccountService to manage current user.

Work on core-ui controllers.

Fix tests for security controllers and their services.

Keep using reference to UserEntity in entities.

Update molgenis-security plus tests (WIP)

add exclusion for commons-logging to the jexl import

Only commons-logging exclusion needed.

Update molgenis-security plus tests

Fix FeedbackController + tests

Fix ImportWizardControllerTest.

Fix StaticContentServiceImplTest.

Fix UserAccountControllerTest

Simplify UserAccountController test setup.

Fix UserManagerServiceImplTest

Clean up UserViewData

Fix UserManagerServiceImplTest

Use UserService in RestController instead of directly querying the DataService.

Fix GavinControllerTest.

Fix MetaDataManagerController + test.

Fix NavigatorController + test

Fix AnnotatorController.

Fix OneClickImporterController + test

Make UserAccountService available to subclasses of VuePluginController.

Fix SortaServiceController.

Fix mapping service classes + tests.

Add mapping project permission check to permission service.

Remove setter that uses UserEntity from JobExecution interface.

Suppress sonar warning for